# frappe-qbs-login-updates

./: README.md  pyproject.toml
.github/workflows/: ci.yml
frappe_qbs_login_updates/: hooks.py  modules.txt
